@@ -2,6 +2,8 @@
 # $Id$
 
 mm-dd-10 - Version 5.1.14
+
+   - Testsuite.simple, CallableStatementTest & CharsetTests are up to date.
    
    - Testsuite.regression SubqueriesRegressionTest and StringRegressionTest are up to date.
 
